Use `Collectors.toList()` while we support older Java versions still